--- a/views/user/add-address.ejs
+++ b/views/user/add-address.ejs
@@ -55,6 +55,7 @@
                 <li class="selected">Manage Address</li>
                 <li><a href="/wishlist">Wishlist</a></li>
                 <li><a href="/orders">Orders</a></li>
+                <li><a href="/wallet">Wallet</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
