--- a/views/user/edit-profile.ejs
+++ b/views/user/edit-profile.ejs
@@ -36,6 +36,7 @@
                     <li><a href="/address">Manage Address</a></li>
                     <li><a href="/wishlist">Wishlist</a></li>
                     <li><a href="/orders">Orders</a></li>
+                    <li><a href="/wallet">Wallet</a></li>
                     <li><a href="/logout">Logout</a></li>
                 </ul>
             </div>
