--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -32,6 +32,6 @@
                 <li><a href="/admin/offers">Offer Management</a></li>
                 <li><a href="/admin/coupons">Coupon Management</a></li>
                 <li><a href="/admin/orders">Order Management</a></li>
-                <li><a href="#sales-report">Sales Report</a></li>
+                <li><a href="/admin/sales-report">Sales Report</a></li>
             </ul>
         </nav>
